[tool.poetry]
name = "toplogger"
version = "0.1.0"
description = "TopLogger API SDK"
authors = ["Hai Duong Tran <tranhd95@gmail.com>"]
readme = "README.md"

dependencies = [
    "requests",
    "requests_cache",
    "plotly",
    "seaborn",
    "pandas",
    "toplogger@git+https://github.com/tranhd95/toplogger-enhanced"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
requests_cache = "*"
plotly = "*"
seaborn = "*"
pandas = "*"
toplogger = { git = "https://github.com/tranhd95/toplogger-enhanced", branch = "main" }

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"