[tool.poetry]
name = "toplogger"
version = "0.1.0"
description = "TopLogger API SDK"
authors = ["Hai Duong Tran <tranhd95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
requests_cache = "*"
plotly = "*"
seaborn = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"